Fix the navbar overlap on the home page

--- a/landing-pages/site/assets/scss/_home-page.scss
+++ b/landing-pages/site/assets/scss/_home-page.scss
@@ -19,8 +19,12 @@
 @import "media";
 
 .home-page-layout {
-  &.container {
-    padding-top: 80px;
+  &.base-layout {
+    padding-top: 70px;
+
+    @media (max-width: $mobile) {
+      padding-top: 16px;
+    }
   }
 }
 .principles-header {
